k8s/domains/identities/infra/ui/base/identities-ns.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: identities
  labels:
    tma.com/gateway-access: traefik
