k8s/domains/identities/infra/ui/base/identities-ui-srv.yaml
apiVersion: v1
kind: Service

metadata:
  name: identities-ui-srv
spec:
  selector:
    app: identities-ui
  ports:
    - name: identities-ui
      port: 3000
      targetPort: 3000
