k8s/domains/identities/infra/ui/base/identities-ui-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: identities-ui-public
spec:
  hostnames:
    - tma.com

  parentRefs:
    - name: traefik-pgw
      namespace: traefik
      sectionName: https-ui

  rules:
    - matches:
        - path:
            type: Exact
            value: /identities
        - path:
            type: PathPrefix
            value: /identities/register
        - path:
            type: PathPrefix
            value: /identities/login
        - path:
            type: PathPrefix
            value: /identities/assets

      backendRefs:
        - name: identities-ui-srv
          port: 3000
